--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         </activity>
 
         <activity android:label="@string/app_name" android:name=".TraceFunction"/>
+        <activity android:label="GradedTrace" android:name=".GradedTrace"/>
+        <activity android:label="Settings" android:name=".Settings"/>
     </application>
 
 </manifest>
